# vendor-billing-system

./: LICENSE  README.md  SRS.docx  User Manual.docx  VendorBillingSystem_UserManual.md  example.py  example_usage.py  pyproject.toml  setup.cfg  test_functionality.py  ~$SRS.docx  ~$er Manual.docx
docs/: requirements.md
examples/: stripe_example.py
src/billing_system/: __init__.py  core.py  exceptions.py  models.py
src/billing_system/notifications/: base.py
src/billing_system/payment/: base.py  paypal_gateway.py  stripe_gateway.py
src/billing_system/pricing/: discounts.py  tax.py
src/billing_system/shipping/: __init__.py  address.py  calculator.py
src/billing_system/storage/: database.py
tests/: __init__.py  test_billing_system.py  test_core.py  test_exceptions.py  test_models.py
