[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vendor-billing-system"
version = "0.1.0"
description = "A flexible billing system for managing multi-vendor orders"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/SsenkingaAbdul/vendor-billing-system"

[tool.setuptools.packages.find]
where = ["src"]