[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vendor-billing-system"
version = "0.1.0"
description = "A flexible billing system for managing multi-vendor orders"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Abdulssenkinga", email = "abdulssenkinga21@gmail.com"},
]
dependencies = [
    "pydantic>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib>=1.7.4",
    "stripe>=5.0.0",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "mypy>=1.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=4.0.0",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/SsenkingaAbdul/vendor-billing-system"
Documentation = "https://vendor-billing-system.readthedocs.io/"
Repository = "https://github.com/SsenkingaAbdul/vendor-billing-system.git"

[tool.setuptools.packages.find]
where = ["src"]